# kuhu

./: README.md  kuhu.cabal  sample.kuhu
app/: Check.hs  Env.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  Type.hs
backend/: Makefile  rts.cpp
backend/src/: codegen.cpp
frontend/: kuhu.cabal
frontend/app/: Check.hs  Syntax.hs  Type.hs
