cabal-version:      2.4
name:               kuhu
version:            0.1.0.0

author:             Malik Ammar Faisal
maintainer:         binfaisal.ammar@gmail.com

extra-source-files: CHANGELOG.md

executable kuhu
    main-is:          Main.hs

    other-modules:
        Lexer
        Parser
        Syntax
        Infer
        Type
        Env

    build-depends:
          base ^>=4.14.3.0
        , containers
        , haskeline  
        , mtl        
        , parsec
        , pretty-simple

    hs-source-dirs:   app
    default-language: Haskell2010
